--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ img{
 }
 
 p{
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .formulario{
@@ -65,4 +65,11 @@ footer{
     color: #fff;
     text-align: center;
     padding: 10px;
+}
+
+.itens{
+    font-size: 16px;
+    font-weight: bold;
+    color: #a13650;
+    margin: 20px;
 }
